# Entwicklung-einer-Robotersteuerungssoftware-fuer-ein-autonomes-Fahrzeugmodell

./: CMakeLists.txt  Gantt Diagramm Maturaarbeit.gan  LICENSE.txt  README.md
Analyse/: Aufwandabschätzung.txt  Evaluation.txt  HW_SW.txt  Webseiten.txt  YT_videos.txt
Analyse/Cheat-Sheats/Commands/: Git_Commands.txt
Analyse/Use-Cases/: Ziel-des-Projekts.txt
Fotos & Videos/: Video1.mov
Implementation/RobotControlSystem/: CMakeLists.txt  Motor.cpp  MotorController.cpp  NavigationSystem.cpp  RobotSystem.cpp
Info/: README.md
Lernmaterial/: Youtube Turtorials  Youtube Tutorials
Planung/: Maturaarbeit Gantt-Diagramm.gan  Must-and-nice-to-haves.txt
RobotControlSystem/: CMakeLists.txt
RobotControlSystem/docs/Analyse/: Anforderungsdokument.docx  Bücher.txt  YT_videos.txt
RobotControlSystem/docs/Planung/: Maturaarbeit Gantt-Diagramm.gan
RobotControlSystem/include/: LidarSensor.h  Motor.h  MotorController.h  NavigationSystem.h  RobotSystem.h
RobotControlSystem/src/: LidarSensor.cpp  Motor.cpp  MotorController.cpp  NavigationSystem.cpp  RobotSystem.cpp  main.cpp
